Bug 1924591 - Improve contrast for multiselect labels on about:welcome r=omc-reviewers,mviar
Differential Revision: https://phabricator.services.mozilla.com/D226405

--- a/browser/components/aboutwelcome/content-src/aboutwelcome.scss
+++ b/browser/components/aboutwelcome/content-src/aboutwelcome.scss
@@ -1904,8 +1904,12 @@ html {
       }
     }
 
-    @media (prefers-contrast: no-preference) and (prefers-color-scheme: dark) {
+    @media (prefers-color-scheme: dark) {
       color: #CFCFD8;
+    }
+
+    @media (prefers-contrast) {
+      color: var(--in-content-page-color);
     }
   }
 
